2014-01-31  Maciej W. Rozycki  <macro@codesourcery.com>

	[BZ #16046]
	* csu/libc-tls.c (static_map): Remove variable.
	(__libc_setup_tls): Use main executable's link map for TLS data.
	* elf/dl-close.c (_dl_close_worker) [!SHARED]: Remove special
	casing for LM_ID_BASE and GL(dl_nns).
	* elf/dl-iteratephdr.c [!SHARED] (dl_iterate_phdr): Remove
	function.  Alias dl_iterate_phdr to __dl_iterate_phdr.
	* elf/dl-load.c (_dl_map_object) [!SHARED]: Remove special
	casing for GL(dl_ns)[LM_ID_BASE]._ns_loaded.
	* elf/dl-support.c (_dl_main_map): Also initialize l_flags_1
	member.
	(_dl_non_dynamic_init): Also initialize _dl_main_map's l_phdr and
	l_phnum members.

2014-01-30  Alexandre Oliva <aoliva@redhat.com>

	* manual/debug.texi: Document MTASC-safety properties.

2014-01-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #16510]
	* sysdeps/x86/fpu/bits/mathinline.h: Check __SSE2_MATH__ instead
	of __x86_64__ when disabling x87 inline functions.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/charset.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/crypt.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/conf.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/arith.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/argp.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/macros.texi: Introduce macros to document multi
	thread, asynchronous signal and asynchronous cancellation
	safety properties.
	* manual/intro.texi: Introduce the properties themselves.

2014-01-27  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/sh4/Makefile: New file.

2014-01-27  Andreas Schwab  <schwab@linux-m68k.org>

	* math/gen-libm-test.pl ($srcdir): New variable.
	($auto_input): Use it.

2014-01-27  Siddhesh Poyarekar  <siddhesh@redhat.com>
